[package]
name = "dotty"
version = "0.0.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.207", features = ["derive"] }
notify = "4.0"
clap = { version = "4.5.15", features = ["derive"] }
git2 = "0.19.0"
toml = "0.8.19"
dirs = "5.0.1"
anyhow = "1.0.86"
log = "0.4.22"
ignore = "0.4.22"
colored = "2.1.0"
env_logger = "0.11.5"
similar = "2.6.0"
symlink = "0.1.0"
job_scheduler = "1.2.1"
hostname = "0.4.0"
